<resources>
    <!--<string name="app_name">AndroidTrain</string>-->
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">DisplayMessage</string>
    <string name="action_search">搜索</string>
    <string name="button_to_fragment">进入Fragment布局</string>
    <string name="title_activity_show_exchange_fragment">ShowExchangeFragment</string>
    <string name="button_to_sql">进入数据库测试界面</string>
    <string name="title_activity_sql_test">SqlTestActivity</string>
    <string name="store_text">保存数据</string>
    <string name="text_message_hint">请输入要保存的数据</string>
    <string name="show_text">点击显示数据库中的数据</string>
    <string name="text_show_hint">在这里显示数据库中的数据</string>
    <string name="button_to_other_app">点击测试与其他app的链接</string>
    <string name="title_activity_connect_app">ConnectAppActivity</string>
    <string name="button_call">点击拨号</string>
    <string name="button_check_map">点击查看地图</string>
    <string name="button_check_webpage">点击查看网页</string>
    <string name="button_send_image">点击发送图片</string>
    <string name="go_to_share_file">进入分享文件学习</string>
    <string name="go_to_recycler_view">点击进入RecyclerView</string>
    <string name="change_layout_manager">点击切换布局</string>
    <string name="go_to_manage_playback">点击进入管理音频界面</string>
    <string name="go_to_simple_camera">进入简单的拍照界面</string>
    <string name="go_to_ui_styletest">进入UI样式测试界面</string>
    <string name="go_to_control_camera">进入自定义相机界面</string>
    <string name="go_to_print_photo">打印照片</string>
    <string name="go_to_print_html">打印HTML</string>
    <string name="go_to_print_define_file">打印自定义文件-未完成</string>
    <string name="title_activity_print_photo">PrintPhotoActivity</string>
    <string name="go_to_print_activity">进入打印</string>
    <string name="go_to_effect_bitmap">高效的Bitmap</string>
    <string name="go_to_ui_bitmap">UI-位图</string>
    <string name="go_to_opengl_es20">openGL测试</string>
    <string name="lorem_ipsum">View间渐变</string>
    <string name="go_to_view_fade">View间渐变</string>
    <string name="go_to_screen_slide_viewpager">屏幕滑动</string>
    <string name="screen_slide_text">子曰：“学而时习之，不亦说乎？有朋自远方来，不亦乐乎？人不知而不愠，不亦君子乎？”
有子曰：“其为人也孝弟，而好犯上者，鲜矣；不好犯上而好作乱者，未之有也。君子务本，本立而道生。孝弟也者，其为仁之本与！”
子曰：“巧言令色，鲜矣仁！”
曾子曰：“吾日三省吾身：为人谋而不忠乎？与朋友交而不信乎？传不习乎？”
子曰：“道千乘之国，敬事而信，节用而爱人，使民以时。”
子曰：“弟子入则孝，出则弟，谨而信，泛爱众，而亲仁，行有余力，则以学文。”
子夏曰：“贤贤易色；事父母，能竭其力；事君，能致其身；与朋友交，言而有信。虽曰未学，吾必谓之学矣。”
子曰：“君子不重则不威，学则不固。主忠信，无友不如己者，过，则勿惮改。”
曾子曰：“慎终追远，民德归厚矣。”
子禽问于子贡曰：“夫子至于是邦也，必闻其政，求之与，抑与之与？”子贡曰：“夫子温、良、恭、俭、让以得之。夫子之求之也，其诸异乎人之求之与？”
子曰：“父在，观其志；父没，观其行；三年无改于父之道，可谓孝矣。”
有子曰：“礼之用，和为贵。先王之道，斯为美，小大由之。有所不行，知和而和，不以礼节之，亦不可行也。”
有子曰：“信近于义，言可复也。恭近于礼，远耻辱也。因不失其亲，亦可宗也。”
子曰：“君子食无求饱，居无求安，敏于事而慎于言，就有道而正焉。可谓好学也已。”
子贡曰：“贫而无谄，富而无骄，何如？”子曰：“可也。未若贫而乐，富而好礼者也。”子贡曰：“《诗》云：‘如切如磋，如琢如磨’，其斯之谓与？”子曰：“赐也，始可与言《诗》已矣，告诸往而知来者。”
子曰：“不患人之不己知，患不知人也。”</string>
    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description">android is very angry, be careful!</string>
    <string name="description_image_1">翻转卡牌图片说明</string>
    <string name="go_to_card_flip">卡片翻转</string>
    <string name="go_to_zoom_animation">缩放视图</string>
    <string name="layout_changes_empty">please press the add button to add something to layout</string>
    <string name="go_to_layout_changes_animation">布局动画</string>
    <string name="go_to_video_media_test">录像测试</string>
    <string name="start_wireless_service">开启服务</string>
    <string name="start_find_wireless_service">发现服务</string>
    <string name="go_to_connect_nsd">NSD连接</string>
    <string name="go_to_connect_wifi_direct">Wifi-P2p</string>
    <string name="last_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="go_to_text_reader">阅读器</string>
    <string name="go_to_start_wifip2p_service">开启P2p服务</string>
    <string name="go_to_connect_found_wifip2p_service">查询P2p服务</string>
    <string name="button_last_page">上一页</string>
    <string name="button_next_page">下一页</string>
    <string name="net_work_ops_get">GET</string>
    <string name="go_to_net_work">互联网</string>
    <string name="net_work_settings">网络偏好设置</string>
    <string name="wifi_connected">现在处于Wifi网络</string>
    <string name="lost_connection">无法连接到网络</string>
    <string name="any_connected">网络可使用</string>
    <string name="start_simple_volley">Volley简单请求</string>
    <string name="cancel_simple_volley">Volley-Simple-Cancel</string>
    <string name="go_to_volley_test">Volley框架</string>
    <string name="current_location">当前位置</string>
    <string name="go_to_nav_swipe_view">滑动导航</string>
    <string name="go_to_nav_drawer">抽屉导航</string>
    <string name="open">抽屉窗口打开</string>
    <string name="close">抽屉窗口关闭</string>
    <string name="go_to_up_navigator">向上导航</string>
    <string name="go_to_notification_builder">进入通知</string>
    <string name="go_to_notification_navigator"><![CDATA[导航&通知]]></string>
    <string name="go_to_notification_big_view">大图通知</string>
    <string name="go_to_notification_progress">进度通知</string>
    <string name="go_to_create_view">自定义UI</string>
    <string name="go_to_dim_bar_activity">淡化系统栏</string>
    <string name="go_to_hide_status_activity">隐藏状态栏</string>
    <string name="go_to_background_fit_system_bar">背景适配导航栏</string>
    <string name="go_to_hide_navigator_bars">隐藏导航栏</string>
    <string name="go_to_immersive_activity">沉浸式界面</string>
    <string name="go_to_material_design_main">Material主</string>
    <string name="go_to_material_recycler_view">Material Recycler</string>
    <string name="go_to_best_user_input">最佳用户输入</string>
    <string name="go_to_main_gestures">手势</string>
    <string name="go_to_movement_gestuers">移动手势跟踪</string>
    <string name="go_to_drag_and_scale_gestuers">拖拽缩放</string>
    <string name="go_to_background_job_display">后台工作</string>
    <string name="alarm_hour">小时</string>
    <string name="alarm_second">秒</string>
    <string name="alarm_minute">分钟</string>
    <string name="alarm_start_button">开始闹钟</string>
</resources>
