<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?android:attr/actionBarSize"
    >

    <EditText
        android:id="@+id/edit_message"
        android:hint="@string/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessageActivity"/>

    <Button
        android:text="@string/button_to_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessageFragment"/>

    <Button
        android:onClick="goToSqlTest"
        android:text="@string/button_to_sql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="goToConnectOtherAppTest"
        android:text="@string/button_to_other_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
