<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.androidtrain.sql.SqlTestActivity">

    <EditText
        android:hint="@string/text_message_hint"
        android:id="@+id/sql_edit_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="storeText"
        android:text="@string/store_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="showText"
        android:text="@string/show_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:hint="@string/text_show_hint"
        android:id="@+id/sql_show_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
