<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.androidtrain.connectApp.ConnectAppActivity"
    tools:showIn="@layout/activity_connect_app">

    <Button
        android:onClick="callPhone"
        android:text="@string/button_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="checkMap"
        android:text="@string/button_check_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="checkWebPage"
        android:text="@string/button_check_webpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
